5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4432/executions/1577_1326.log
== TEST (2019-03-26 18:10:38) 
-- CODE:
a=40
b=35
c=a+b
prit("c")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    prit("c")
NameError: name 'prit' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:10:49) 
-- CODE:
a=40
b=35
c=a+b
print("c")
-- OUTPUT:
c
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 18:11:56) 
-- CODE:
a=40
b=35
c=a+b
print(c)
-- OUTPUT:
75
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:11:58) 
-- CODE:
a=40
b=35
c=a+b
print(c)
-- EXECUTION TIME:
0.129524
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:12:04) 
-- CODE:
a=40
b=35
c=a+b
print()
-- EXECUTION TIME:
0.158475
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 18:12:18) 
-- CODE:
a=40
b=35
c=a+b
print(c)
-- EXECUTION TIME:
0.139585
-- TEST CASE 1:
---- input:
xx
---- correct output:
75
---- user output:
75
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
